--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	
 <h1>You are a warrior fiding treasure in a fantasy world!</h1>
 <p>In your travels, you find a abandoned castle in the middle of a forest. Which way will you go warrior?</p>
-<img src="file:///Users/bryant/Desktop/WebPhotos/pexels-fotios-photos-3799802.jpg" width="500" height="500">
+<img src="https://images.pexels.com/photos/3799802/pexels-photo-3799802.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1 width="500" height="500">
    <ul class="nav-list">
    	 <a href="door.html">Front door?</a>
    	 <p>Or</p>
